# react-native-nitro-opencv

./: .gitignore  .gitmodules  README.md  eslint.config.mjs  nitro.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/margelo/nitro/nitroopencv/: NitroOpencvPackage.java
cpp/: ConvertImage.cpp  HybridColorConversion.cpp  HybridColorConversion.hpp  HybridCore.cpp  HybridCore.hpp  HybridDrawing.hpp  HybridFeature.cpp  HybridImageFiltering.hpp  HybridImageTransform.hpp  HybridMat.cpp  HybridMat.hpp  HybridMisc.cpp  HybridMisc.hpp  HybridRect.hpp  HybridRotatedRect.hpp  HybridShape.hpp  HybridSize.cpp  HybridVectors.hpp  utils.hpp
example/: babel.config.js  metro.config.js  package.json  react-native.config.js
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/example/: MainActivity.kt  MainApplication.kt
example/ios/example.xcodeproj/: project.pbxproj
example/src/examples/: CameraPassthrough.tsx  CameraRealtimeDetection.tsx  DocumentDetection.tsx  ImageExample.tsx
scripts/: android.config.py  build-opencv-android.ts  build-opencv-ios.ts  install-opencv-android-sdk.ts  install-opencv-ios-framework.ts
src/: index.ts
src/specs/: constants-color-conversions-codes.ts  constants-image-processing.ts  data-types.ts  functions-color-conversion.nitro.ts  functions-core.nitro.ts  functions-image-transform.nitro.ts  functions-misc.nitro.ts  point.nitro.ts  rect-vector.nitro.ts  rect.nitro.ts  rotated-rect.nitro.ts  size.nitro.ts
